<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/sync_data"
                android:textColor="@color/color_737a82"
                android:textSize="32dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/color_888" />

            <LinearLayout
                android:id="@+id/ll_resync_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resync_data"
                    android:textColor="@color/color_737a82"
                    android:textSize="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resync_data_desc"
                    android:textColor="@color/color_737a82"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/color_888" />

            <LinearLayout
                android:id="@+id/ll_incremental_sync_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incremental_sync_data"
                    android:textColor="@color/color_737a82"
                    android:textSize="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incremental_sync_data_desc"
                    android:textColor="@color/color_737a82"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/color_888" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/clear_data"
                android:textColor="@color/color_737a82"
                android:textSize="32dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/color_888" />

            <LinearLayout
                android:id="@+id/ll_sync_data_clear_attend_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="清除刷卡数据"
                    android:textColor="@color/color_737a82"
                    android:textSize="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_attendance_data_desc"
                    android:textColor="@color/color_737a82"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/color_888" />

            <LinearLayout
                android:id="@+id/ll_sync_data_clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all_data"
                    android:textColor="@color/color_737a82"
                    android:textSize="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all_data_desc"
                    android:textColor="@color/color_737a82"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/color_888" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>